manage consumer portal

--- a/app/views/people/_available_accounts.html.erb
+++ b/app/views/people/_available_accounts.html.erb
@@ -3,35 +3,50 @@
   <div class="col-12 mt-3 no-pd">
     <div class="d-flex flex-row bg-white rounded flex-shadow">
       <div class="col-10 p-3">
-        <h6><b>Employee</b></h6>
+        <h6><b><%= l10n("employee")%></b></h6>
         <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et aliqua..</p>
       </div>
       <div class="col-2 p-3">
         <button type="button" class="btn btn-outline-primary pull-right mt-3" data-toggle="modal" data-target="#confirm-submit">
-          Add Portal
+          <%= l10n("add_portal")%>
         </button>
       </div>
     </div>
   </div>
+  <%unless @person.user.roles.include?('consumer')%>
+    <div class="col-12 mt-3 no-pd">
+      <div class="d-flex flex-row bg-white rounded flex-shadow">
+        <div class="col-10 p-3">
+          <h6><b><%= l10n("consumer")%></b></h6>
+          <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et aliqua..</p>
+        </div>
+        <div class="col-2 p-3">
+          <button type="button" class="btn btn-outline-primary pull-right mt-3" data-toggle="modal" data-target="#fein-consumer-confirm-submit">
+            <%= l10n("add_new_portal")%>
+          </button>
+        </div>
+      </div>
+    </div>
+  <%end%>
   <div class="col-12 mt-3 no-pd">
     <div class="d-flex flex-row bg-white rounded flex-shadow">
       <div class="col-10 p-3">
-        <h6><b>Employer</b></h6>
+        <h6><b><%= l10n("employer")%></b></h6>
         <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et aliqua..</p>
       </div>
       <div class="col-2 p-3">
-        <%= link_to "Add Portal", benefit_sponsors.new_employer_profile_form_profiles_registrations_path(person_id: @person.id, profile_type: :benefit_sponsor) , class: "btn btn-outline-primary pull-right mt-3" %>
+        <%= link_to l10n("add_portal"), benefit_sponsors.new_employer_profile_form_profiles_registrations_path(person_id: @person.id, profile_type: :benefit_sponsor) , class: "btn btn-outline-primary pull-right mt-3" %>
       </div>
     </div>
   </div>
   <div class="col-12 mt-3 no-pd">
     <div class="d-flex flex-row bg-white rounded flex-shadow">
       <div class="col-10 p-3">
-        <h6><b>Employer POC</b></h6>
+        <h6><b><%= l10n("employer_poc")%></b></h6>
         <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et aliqua..</p>
       </div>
       <div class="col-2 p-3">
-        <%= link_to "Add Portal", benefit_sponsors.new_staff_member_profiles_employers_employer_staff_roles_path(id: @person.id) , class: "btn btn-outline-primary pull-right mt-3" %>
+        <%= link_to l10n("add_portal"), benefit_sponsors.new_staff_member_profiles_employers_employer_staff_roles_path(id: @person.id) , class: "btn btn-outline-primary pull-right mt-3" %>
       </div>
     </div>
   </div>
@@ -41,17 +56,37 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Confirm Creation of New Portal</h5>
+        <h5 class="modal-title"><%= l10n("confirm_creation_of_new_portal")%></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <p><strong>New Employee Application</strong></p>
+        <p><strong><%= l10n("new_employee_application")%></strong></p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <%= link_to 'Add Role', main_app.privacy_insured_employee_index_path(person_id: @person.id), class: 'btn btn-primary' %>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal"><%= l10n("cancel")%></button>
+        <%= link_to l10n("add_role"), main_app.privacy_insured_employee_index_path(person_id: @person.id), class: 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" tabindex="-1" role="dialog" id="fein-consumer-confirm-submit">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title"><%= l10n("confirm_creation_of_new_portal")%></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p><strong><%= l10n("new_consumer_application")%></strong></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal"><%= l10n("cancel")%></button>
+        <%= link_to l10n("add_role"), build_insured_consumer_role_index_path, method: :post, class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
