--- a/app/views/exchanges/employer_applications/_reinstate_benefit_application_modal.html.erb
+++ b/app/views/exchanges/employer_applications/_reinstate_benefit_application_modal.html.erb
@@ -1,29 +1,22 @@
-<div class="modal" id="reinstateBenefitApplication_<%= application.id %>" tabindex="-1" role="dialog" role="document">
+<div class="modal" id="reinstateBenefitApplication" tabindex="-1" role="dialog" role="document">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
-      <div class="modal-body">
-        <h4><%= l10n("exchange.employer_applications.confirmation_message")%></h4>
-      </div>
-      <div class="modal-footer">
-        <%= link_to l10n("exchange.employer_applications.continue"), exchanges_employer_application_reinstate_path({employer_application_id: application.id, employer_id: application.benefit_sponsorship.id}), method: :put, remote: true, class: "btn btn-primary mtz  btn-small"%>
-        <!--TODO: Fix THIS-->
-        <%#= link_to l10n("exchange.employer_applications.continue"), '#', :onclick => "submitReinstateAction('#{application.id}','#{application.benefit_sponsorship.id}')", class: "btn btn-primary mtz  btn-small"%>
-        <span class="btn btn-default btn-small" data-dismiss="modal"><%= l10n("exchange.employer_applications.cancel")%></span>
-      </div>
+
+      <%= form_tag(reinstate_exchanges_employer_applications_path, method: :put) do %>
+          <div class="modal-body">
+            <h4><%= l10n("exchange.employer_applications.confirmation_message")%></h4>
+          </div>
+          <%= hidden_field_tag 'transmit_to_carrier' %>
+          <%= hidden_field_tag 'employer_id' %>
+          <%= hidden_field_tag 'employer_application_id' %>
+          <div class="modal-footer">
+            <%= submit_tag l10n("exchange.employer_applications.continue"), class: "btn btn-primary mtz  btn-small" %>
+            <span class="btn btn-default btn-small" data-dismiss="modal"><%= l10n("exchange.employer_applications.cancel")%></span>
+          </div>
+      <% end %>
     </div>
   </div>
 </div>
-
-<script>
-  function submitReinstateAction(applicationId, sponosorshipId) {
-    transmit_to_carrier =  $('#' + applicationId).find('input[id=transmit_to_carrier]').is(":checked")
-    $.ajax({
-        url: "/exchanges/employer_applications/"+applicationId+"/reinstate",
-        method: 'PUT',
-        data: { employer_application_id: applicationId, employer_id: sponosorshipId, transmit_to_carrier: transmit_to_carrier }
-    });
-  }
-</script>
