checking for dob presence

--- a/app/views/people/_available_accounts.html.erb
+++ b/app/views/people/_available_accounts.html.erb
@@ -22,7 +22,7 @@
         </div>
         <div class="col-2 p-3">
           <button type="button" class="btn btn-outline-primary pull-right mt-3" data-toggle="modal" data-target="#fein-consumer-confirm-submit">
-            <%= l10n("add_new_portal")%>
+            <%= l10n("add_portal")%>
           </button>
         </div>
       </div>
