REFS Adds il18n tasks and normalizes the locales.
REFS Maintenance - Updates fake view.

--- a/app/views/users/fake_view.html.erb
+++ b/app/views/users/fake_view.html.erb
@@ -1,1 +1,3 @@
-<p> This is a fake view without internationalization </p>
+<p> "This is a fake view without internationalization" </p>
+
+<%= "This is a fake string for testing" %>
