hub page updates

--- a/app/javascript/css/custom.scss
+++ b/app/javascript/css/custom.scss
@@ -89,10 +89,6 @@
   float: right !important;
 }
 
-.flex-shadow {
-  box-shadow: 0 2px 4px rgba(0,0,0,.25)
-}
-
 .mt-1 {
   margin-top: 10px !important;
 }
@@ -105,9 +101,34 @@
   margin-top: 30px !important;
 }
 
-.portal-label {
-  margin-left: 5px;
-  font-size: 14px
+.ml-25 {
+  margin-left: 25px;
+}
+
+.hub-label {
+  font-size: 25px
+}
+
+.hub-label a {
+  color: #007bc4;
+  font-weight: 600;
+}
+
+.hub-flex-shadow {
+  box-shadow: 0 2px 4px rgba(0,0,0,.25);
+  border-left: solid 5px #007bc4;
+}
+
+.caret {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: 2px;
+  vertical-align: middle;
+  border-top: 4px dashed;
+  border-top: 4px solid \9;
+  border-right: 4px solid transparent;
+  border-left: 4px solid transparent;
 }
 
 .fade.in {
