--- a/app/views/people/show_roles.html.erb
+++ b/app/views/people/show_roles.html.erb
@@ -3,9 +3,9 @@
 <% end %>
 
 <div class="documents-tab" style="padding-top: 0px !important;">
-  <h2> My Portals </h2>
+  <h2> My Hub </h2>
 
-  <p> Add additional roles or quickly jump to a portage using the links below. </p>
+  <p> <%= l10n("exchange.hub.add_account_description") %></p>
 
   <%= render partial: 'people/person_roles' %>
 </div>
