--- a/app/views/people/_person_roles.html.erb
+++ b/app/views/people/_person_roles.html.erb
@@ -1,19 +1,27 @@
 <div class="container no-pd">
+  <div class="mt-1 no-pd">
+    <%= link_to "Add Account", available_accounts_person_path(id: @person.id), class: "btn btn-outline-primary" unless @available_roles.admin_roles.present? || @available_roles.resident_roles.present? %>
+  </div>
   <div class="mt-3">
     <% if @available_roles.active_roles.present? %>
-      <h4> Active Portals </h4>
       <% @available_roles.active_roles.each do |active_role| %>
         <div class="col-12 mt-1 no-pd">
-          <div class="d-flex flex-row bg-white rounded flex-shadow">
-            <div class="col-6 p-2"><span class="portal-label"> <%= link_to active_role.name, active_role.link %></span></div>
-            <div class="col-3 p-2"><label class="personal-info-label">Type:</label> <span class="portal-label"><%= active_role.kind %></span></div>
-            <div class="col-3 p-2"><label class="personal-info-label">Start Date:</label><span class="portal-label"><%= active_role.date %></span></div>
+          <div class="d-flex flex-row bg-white rounded hub-flex-shadow p-2">
+            <div class="col-8">
+              <div class="ml-25"><span class="hub-label"><strong><%= link_to active_role.name.humanize, active_role.link %></strong></span></div>
+              <div class="ml-25">Point Of Contact - <%= active_role.kind %></div>
+            </div>
+            <div class="col-4 p-2">
+              <div class="dropdown pull-right">
+                <button class="btn btn-default dropdown-toggle interaction-click-control-actions" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Actions
+                  <span class="caret"></span>
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       <% end %>
-      <div class="col-md-12 mt-1 no-pd">
-        <%= link_to "Add New Portal", available_accounts_person_path(id: @person.id), class: "col-12 btn btn-outline-primary" unless @available_roles.admin_roles.present? || @available_roles.resident_roles.present? %>
-      </div>
     <% end %>
   </div>
 
@@ -22,10 +30,11 @@
       <h4> Pending Portals </h4>
       <% @available_roles.pending_roles.each do |pending_role| %>
         <div class="col-12 mt-1 no-pd">
-          <div class="d-flex flex-row bg-white rounded flex-shadow">
-            <div class="col-6 p-2"><span class="portal-label"><%= pending_role.name %></span></div>
-            <div class="col-3 p-2"><label class="personal-info-label">Type:</label> <span class="portal-label"><%= pending_role.kind %></span></div>
-            <div class="col-3 p-2"><label class="personal-info-label">Start Date:</label><span class="portal-label"><%= pending_role.date %></span></div>
+          <div class="d-flex flex-row bg-white rounded hub-flex-shadow p-2">
+            <div class="col-8">
+              <div class="ml-25"><span class="hub-label"><%= pending_role.name.humanize %></span></div>
+              <div class="ml-25">Point Of Contact - <%= pending_role.kind %></div>
+            </div>
           </div>
         </div>
       <% end %>
@@ -37,10 +46,11 @@
       <h4> Inactive Portals </h4>
       <% @available_roles.inactive_roles.each do |inactive_portal| %>
         <div class="col-12 mt-1 no-pd">
-          <div class="d-flex flex-row bg-white rounded flex-shadow">
-            <div class="col-6 p-2"><span class="portal-label"><%= inactive_portal.name %></span></div>
-            <div class="col-3 p-2"><label class="personal-info-label">Type:</label> <span class="portal-label"><%= inactive_portal.kind %></span></div>
-            <div class="col-3 p-2"><label class="personal-info-label">Start Date:</label><span class="portal-label"><%= inactive_portal.date %></span></div>
+          <div class="d-flex flex-row bg-white rounded hub-flex-shadow p-2">
+            <div class="col-8">
+              <div class="ml-25"><span class="hub-label"><%= inactive_portal.name %></span></div>
+              <div class="ml-25"><span class="hub-label"><%= inactive_portal.kind %></span></div>
+            </div>
           </div>
         </div>
       <% end %>
