--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -30,7 +30,7 @@
               <div class="col-md-11 col-sm-12 col-xs-12 no-pd">
                 <div class="col-md-10 col-sm-10 no-pd col-xs-12">
                   <p>
-                    <span>Welcome.</span> Let's get you signed up for health care. Lorem ipsum dolot sit amet. Ut enim ad minim vineam, quis nostrud exarciation ullamco laboris nisi ut aliquip ex ea commondo consequat. Lorem ipsum dolor sit amet. Ut enim ad dolor sit
+                    <span>Welcome.</span> Let's get you signed up for health care.
                   </p>
                 </div>
                 <a id="continue" class="btn btn-continue <%=pundit_class EmployerProfile,:updateable?%>" href="#">Continue</a>
