--- a/app/views/insured/group_selection/_enrollment.html.erb
+++ b/app/views/insured/group_selection/_enrollment.html.erb
@@ -46,7 +46,7 @@
                       <label><%= l10n("termination_date") %>: </label>
                     </div>
                     <div class="col-md-6 termination_date no-pd-left">
-                      <%= select_tag :terminated_on, options_for_select(@termination_date_options[hbx_enrollment.id.to_s], selected: hbx_enrollment.terminated_on), {prompt: l10n("choose").to_s.downcase + "...", required: true, id: hbx_enrollment.hbx_id, name: "terminated_on"} %>
+                      <%= select_tag :terminated_on, options_for_select(@termination_date_options[hbx_enrollment.id.to_s], selected: hbx_enrollment.terminated_on), {prompt: l10n("choose") + "..", required: true, id: hbx_enrollment.hbx_id, name: "terminated_on"} %>
                     </div>
                   </div>
                 <% else %>
