--- a/spec/support/fake_view.html.erb
+++ b/spec/support/fake_view.html.erb
@@ -214,7 +214,7 @@
 <td colspan="1"><%= "Untranslated String" %></td>
 Here is another bad string.
 <%= "Bad String" %>
-This is a problematic sstring.
+This is a problematic string.
 
 <script>
   var initiallyHiddenEnrollmentPanels = document.getElementsByClassName("initially_hidden_enrollment");
