--- a/spec/support/fake_view.html.erb
+++ b/spec/support/fake_view.html.erb
@@ -215,6 +215,8 @@
 Here is another bad string.
 <%= "Bad String" %>
 This is a problematic string.
+Here. This is another string- we have to test it and see what happens.
+This <%= "Bad String" %>is another test
 
 <script>
   var initiallyHiddenEnrollmentPanels = document.getElementsByClassName("initially_hidden_enrollment");
