REFS Maintenance - More view for linting.

--- a/spec/support/fake_view.html.erb
+++ b/spec/support/fake_view.html.erb
@@ -223,6 +223,7 @@ This <%= "Bad String" %>is another test
 <%= @person.id %>
 <%= @family.primary_person.full_name %>
 <%= benefit_application.created_at %>
+<%= "this is unlinted" %>
 
 <script>
   var initiallyHiddenEnrollmentPanels = document.getElementsByClassName("initially_hidden_enrollment");
