--- a/spec/support/fake_view_2.html.erb
+++ b/spec/support/fake_view_2.html.erb
@@ -24,7 +24,7 @@
       Recipient Type
     </div>
     <div class='col-2 text-right'>
-      Responsible Party
+      <%= "Responsible Party" %>
     </div>
   </div>
 
