--- a/app/javascript/css/custom.scss
+++ b/app/javascript/css/custom.scss
@@ -37,12 +37,6 @@
   color: #23527c;
 }
 
-.menu-list {
-  li {
-    text-align: right !important;
-  }
-}
-
 .personal-info-container {
   max-width: 1000px;
 }
@@ -119,6 +113,10 @@
   border-left: solid 5px #007bc4;
 }
 
+.hub-item-flex-shadow {
+  box-shadow: 0 6px 4px rgba(0,0,0,.25);
+}
+
 .caret {
   display: inline-block;
   width: 0;
@@ -131,9 +129,6 @@
   border-left: 4px solid transparent;
 }
 
-.fade.in {
-  opacity: 1;
-}
 
 .broker-staff {
   width: 60em;
