--- a/app/views/people/_person_roles.html.erb
+++ b/app/views/people/_person_roles.html.erb
@@ -1,6 +1,128 @@
 <div class="container no-pd">
   <div class="mt-1 no-pd">
-    <%= link_to "Add Account", available_accounts_person_path(id: @person.id), class: "btn btn-outline-primary" unless @available_roles.admin_roles.present? || @available_roles.resident_roles.present? %>
+    <%#= link_to "Add Account", available_accounts_person_path(id: @person.id), class: "btn btn-outline-primary" unless @available_roles.admin_roles.present? || @available_roles.resident_roles.present? %>
+    <% unless @available_roles.admin_roles.present? || @available_roles.resident_roles.present? %>
+      <button type="button" class= "btn btn-default" data-toggle="modal" data-target="#addAccount">
+        <%= l10n("hub.home_page.add_account") %>
+      </button>
+    <% end %>
+
+    <div class="modal fade" id="addAccount" tabindex="-1" role="dialog" aria-labelledby="addAccountLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-body" style="padding: 25px; text-align: center;">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h5 class="modal-title" id="addAccountLabel" style="color: #007bc4;"><%= l10n("hub.home_page.add_account.modal.title") %></h5>
+            <div style="padding: 10px 50px 25px 75px; text-align: left;">
+              <p><%= l10n("hub.home_page.add_account.modal.description") %> <strong><%= l10n("hub.home_page.title") %></strong></p>
+
+              <%# Get roles variable from controller & loop - todo %>
+              <div class="d-flex flex-row bg-white hub-item-flex-shadow ivl-card" style="border-radius: 10px; text-align: left; padding: 25px; margin-bottom: 10px; border: #b7afaf solid 1px;" data-toggle="modal" data-target="#addIvlAccount" data-dismiss="modal">
+                <div class="col-2">
+                  <i class="fas fa-users fa-3x"></i>
+                </div>
+                <div class="col-10">
+                  <div class=""><strong style="color: #007bc4;"><%= l10n("hub.home_page.add_account.modal.ivl_title") %></strong></div>
+                  <div class=""><small><%= l10n("hub.home_page.add_account.modal.ivl_description") %></small></div>
+                </div>
+              </div>
+
+              <div style="padding: 10px;">
+                <p style="border: 1px solid grey; border-radius: 50%; width: fit-content; position: relative; margin: 0 auto; padding: 5px;">or</p>
+              </div>
+
+              <div class="d-flex flex-row bg-white hub-item-flex-shadow employee-card" style="border-radius: 10px; text-align: left; padding: 25px; margin-bottom: 10px; border: #b7afaf solid 1px">
+                <div class="col-2">
+                  <i class="far fa-address-card fa-3x"></i>
+                </div>
+                <div class="col-10">
+                  <div class=""><strong style="color: #007bc4;"><%= l10n("hub.home_page.add_account.modal.employee_title") %></strong></div>
+                  <div class=""><small><%= l10n("hub.home_page.add_account.modal.employee_description") %></small></div>
+                </div>
+              </div>
+
+              <div style="padding: 10px;">
+                <p style="border: 1px solid grey; border-radius: 50%; width: fit-content; position: relative; margin: 0 auto; padding: 5px;">or</p>
+              </div>
+
+              <div class="d-flex flex-row bg-white hub-item-flex-shadow employer-card" style="border-radius: 10px; text-align: left; padding: 25px; margin-bottom: 10px; border: #b7afaf solid 1px" data-toggle="modal" data-target="#addEmployerAccount" data-dismiss="modal">
+                <div class="col-2">
+                  <i class="fas fa-home fa-3x"></i>
+                </div>
+                <div class="col-10">
+                  <div class=""><strong style="color: #007bc4;"><%= l10n("hub.home_page.add_account.modal.employer_title") %></strong></div>
+                  <div class=""><small><%= l10n("hub.home_page.add_account.modal.employer_description") %></small></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="addEmployerAccount" tabindex="-1" role="dialog" aria-labelledby="addEmployerAccountLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-body" style="padding: 25px; text-align: center;">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h5 class="modal-title" id="addEmployerAccountLabel" style="color: #007bc4;"><%= l10n("hub.home_page.add_account.modal.employer_modal.title") %></h5>
+            <div style="padding: 10px 50px 25px 75px; text-align: left;">
+              <p><%= l10n("hub.home_page.add_account.modal.employer_modal.description1") %> <strong>employer name</strong>. <%= l10n("hub.home_page.add_account.modal.employer_modal.description2") %> <strong><%= l10n("hub.home_page.add_account.modal.employer_modal.sub_description") %></strong> <%= l10n("hub.home_page.add_account.modal.employer_modal.description3") %></p>
+
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                <label class="form-check-label" for="exampleRadios1">
+                  <%= l10n("hub.home_page.add_account.modal.employer_modal.roster_yes_text") %> <strong><%= l10n("hub.home_page.add_account.modal.employer_modal.roster_sub_text") %></strong>
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                <label class="form-check-label" for="exampleRadios2">
+                  <%= l10n("hub.home_page.add_account.modal.employer_modal.roster_no_text") %> <strong><%= l10n("hub.home_page.add_account.modal.employer_modal.roster_sub_text") %></strong>
+                </label>
+              </div>
+
+              <a href="/" class="btn btn-danger">Continue</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="addIvlAccount" tabindex="-1" role="dialog" aria-labelledby="addIvlAccountLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-body" style="padding: 25px; text-align: center;">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h5 class="modal-title" id="addIvlAccountLabel" style="color: #007bc4;"><%= l10n("hub.home_page.add_account.modal.ivl_modal.title") %></h5>
+            <div style="padding: 10px 50px 25px 75px; text-align: left;">
+              <p><%= l10n("hub.home_page.add_account.modal.ivl_modal.description") %></p>
+
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                <label class="form-check-label" for="exampleRadios1">
+                  <strong><%= l10n("hub.home_page.add_account.modal.ivl_modal.aqhp_yes_text") %> </strong><%= l10n("hub.home_page.add_account.modal.ivl_modal.aqhp_yes_text.sub_text") %>
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+                <label class="form-check-label" for="exampleRadios2">
+                  <strong><%= l10n("hub.home_page.add_account.modal.ivl_modal.aqhp_no_text") %></strong>
+                </label>
+              </div>
+
+              <a href="/" class="btn btn-danger">Continue</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="mt-3">
     <% if @available_roles.active_roles.present? %>
@@ -59,3 +181,19 @@
     <% end %>
   </div>
 </div>
+
+<style type="text/css">
+
+  .hub-item-flex-shadow {
+    cursor: pointer;
+    width: 95%;
+  }
+
+  .hub-item-flex-shadow:hover {
+    zoom: 1.01;
+  }
+
+  .form-check {
+    padding-bottom: 10px;
+  }
+</style>
