--- a/spec/support/fake_view.html.erb
+++ b/spec/support/fake_view.html.erb
@@ -24,6 +24,8 @@
       <div class="col-xs-12 vertically-aligned-row">
         <div>
           <%= display_carrier_logo(Maybe.new(product), {width: 110}) %>
+          <input id='Pizza'>
+          <input id='Pizza'>
         </div>
         <h3>
           <%= link_to(product.title, summary_products_plans_path({:standard_component_id => product.hios_id, hbx_enrollment_id: hbx_enrollment.id, active_year: product.active_year}), remote: true)%>
