--- a/app/views/people/_person_roles.html.erb
+++ b/app/views/people/_person_roles.html.erb
@@ -143,7 +143,7 @@
                     Actions
                     <span class="caret"></span>
                   </button>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                  <div class="dropdown-menu dropdown-menu-right actions-menu" aria-labelledby="dropdownMenuButton">
                     <%= link_to benefit_sponsors.new_employer_profile_form_profiles_registrations_path(person_id: @person.id, profile_type: :benefit_sponsor, with_roster: true) do %>
                       <span class="dropdown-item">Copy this info to a new account</span>
                     <% end %>
@@ -213,6 +213,15 @@
   a {
     color: black;
   }
+
+  .actions-menu {
+    border: 1px solid #007bc4;
+  }
+
+  .actions-menu span {
+    color: #007bc4;
+  }
+
 </style>
 
 
