--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_employer_profile_form.html.slim
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_employer_profile_form.html.slim
@@ -80,6 +80,8 @@ fieldset.mt-2
 
 javascript:
 
+  var disableSelectric = true;
+
   function isApplyingCoverage(element) {
     var result = document.querySelectorAll('.optional');
     var ssn = document.getElementById("inputSsn")
